* Add extra data on loan
* Add lender field on loan
* Calculate and store early repayments on increments
* Allow to use first payment end balance rather than begin balance on increments
* Allow deferral on any kind of loan including graduated and balloon
* Allow to recalculate increment dates from first payment date

Version 1.6 - 2015-12-23
* Manage extra premium depending on remaining capital amount
* Allow to insert manual increments to modify the loan at effective date (reimbursement, rate modification...)
* Add warning on loan if last payment is way different from last increment payment amount
* Allow to have different payment frequency during the life of the loan (one per increment)
* Allow to enter the loan duration in month or year, regardless of the payment frequency

Version 1.4 - 2015-05-29
* Allow user to force loan modification even if there is another active contract using it

Version 1.3 - 2015-01-22
* Use workflow to compute loan payments
* Use bisect to speed up payment by date finding

Version 1.2 - 2014-07-01
* Changelog file creation
* Add wizard to display outstanding amounts